# UploadCore

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  docker-compose.yaml
configs/: static_config.yaml
migrations/: 001_create_files_table.sql
scripts/: db-migrate.sh  db-psql.sh  db-up.sh  logs-debug.sh  pretty-tskv.py  run-service.sh
src/: main.cpp
